--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+        <title>Quick Knowledge Test</title>
+        <link rel="stylesheet" href="app.css" />
+    </head>
+    <body style="background-color:#fc03f8;">
+        <div class="container" style="background-image:url(quiz1.jpg);background-repeat: no-repeat;background-size: cover; ">
+            <div id="home" class="flex-center flex-column">
+                <h1>Quick Knowledge Test</h1>
+                <a class="btn" href="/game.html">Play</a>
+                <a class="btn" href="/highscores.html">High Scores</a>
+            </div>
+        </div>
+    </body>
 </html>
